# Iridium_Oxide_ASE.ipynb

./: .gitignore  IrO2_Test_1.py  README.md  environment.yml  iro2_test_1.py  load_jw  load_jw.py  paper.bib  paper.md  pyproject.toml  superstaq.py
.github/legacy_scripts/: example_workflow.yml
.github/workflows/: cluster-extraction.yml  draft-pdf.yml  example_run_all.yml  example_workflow.yml  hamiltonian-export.yml  orbital-analysis.yml  python-package-conda.yml
examples/: run_all.sh
examples/iro2_h_star_o69/: README.md  run_all.sh
inputs/: qubit_hamiltonian_jw.json  slab_clean_2x2.in  state_set.json
legacy_scripts/: fit_ising_shells.py  iro2_pair_setup.py  potential_window.py
scripts/: build_fermionic_hamiltonian_pyscf.py  build_ising_dataset_from_outputs.py  export_qubit_hamiltonian_json.py  extract_cluster.py  generate_states.py  iro2_slab_setup.py  optimization_iro2_3.py  optimization_iro2_test.py  orbital_analysis_xtb_cluster.py  run_state_optimizations.py
tests/: test_ase_import.py  test_xtb_cli.py  xtb_energy_test.py  xtb_python_import_test
workflows/: python-tests.yml
